--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,36 @@
-html {
-  text-align: center;
-  width: 100%;
-  max-width: 1440px;
-  height: 100%;
-  background-color: hsl(218, 23%, 16%);
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 800;
-  font-style: normal;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: auto;
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
 }
+
+body {
+  background-color: #ffffff;
+}
+
+
+@font-face {
+  font-family: "Donpoligrafbum";
+  font-style: Bold;
+  font-weight: 400;
+  src: local("Donpoligrafbum-Bold"),
+       url("../public/fonts/Donpoligrafbum-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "GellaDisplay";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../public/fonts/GellaDisplay-ExpandedMedium.otf");
+}
+
+@font-face {
+  font-family: "Involve Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../public/fonts/Involve-Regular.ttf");
+}
+
