--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -10,10 +10,11 @@
 
 main {
     padding: 50px 0;
+    background-color: #69B3D7;
 }
 
 .animeCard {
-    background-color: #e7cde9;
+    background-color: #eeddef;
     border-radius: 5px;
     padding: 20px;
     text-align: center;
@@ -29,6 +30,7 @@ main {
 .animeCard h2 {
     font-size: 20px;
     margin-bottom: 10px;
+    color:#312f2f;
 }
 
 .animeCard p {
