--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,14 @@ body {
   src: url("../public/fonts/Involve-Regular.ttf");
 }
 
+.megrim-regular {
+  font-family: "Megrim", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+.rubik-mono-one-regular {
+  font-family: "Rubik Mono One", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
