--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,33 +1,30 @@
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 header {
-
-    background-color: #90A070;
-    font-family: "Rubik Mono One", monospace;
-    color: #f6c4d0;
-    padding: 20px 0;
-
+  background-color: #90a070;
+  font-family: "Rubik Mono One", monospace;
+  color: #f6c4d0;
+  padding: 20px 0;
 }
 
 header .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 header h1 {
-    font-size: 32px;
-    &:hover{
-        transition: 1s;
-        transform: scale(1.2);
-        color: #fbe0e6;
-   }
-
+  font-size: 32px;
+  &:hover {
+    transition: 1s;
+    transform: scale(1.2);
+    color: #fbe0e6;
+  }
 }
 
 $media: screen;
@@ -38,12 +35,10 @@ $value: 1.5;
   header h1 {
     font-size: 24px;
     padding: 20px 0;
-    &:hover{
-        transition: 1s;
-        transform: scale(1.1);
-        color: #fbe0e6;
+    &:hover {
+      transition: 1s;
+      transform: scale(1.1);
+      color: #fbe0e6;
     }
-
   }
 }
-
