--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,57 +1,35 @@
-
-
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    font-family: "Involve Regular";
-
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  font-family: "Involve Regular";
 }
 
 main {
-    padding: 50px 0;
-    background-color: #69B3D7;
+  padding: 50px 0;
+  background-color: #69b3d7;
 }
 
 .animeCard {
-    background-color: #eeddef;
-    border-radius: 5px;
-    padding: 20px;
-    text-align: center;
-    
+  background-color: #eeddef;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
 }
 
 .animeCard img {
-    max-width: 100%;
-    border-radius: 5px;
-    margin-bottom: 20px;
+  max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .animeCard h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color:#312f2f;
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #312f2f;
 }
 
 .animeCard p {
-    font-size: 16px;
-    color: #666;
+  font-size: 16px;
+  color: #666;
 }
-
-.btn {
-    background-color: #be377166;
-    border-radius: 10px;
-    color: #312f2f;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    &:hover{
-        background-color: #be3771a5;
-        transition: all 1s ease;
-    }
-}
-
-
-
