изменено изображение раздела помощь

--- a/src/components/Feedback/Feedback.module.scss
+++ b/src/components/Feedback/Feedback.module.scss
@@ -3,7 +3,7 @@
   margin: auto;
   padding: 30px;
   font-family: "Involve Regular";
-  background-color: #eeddef;
+  background-color: #eeddef62;
   border-radius: 5px;
   text-align: center;
   color: #666;
