--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -7,11 +7,11 @@
 
 main {
   padding: 50px 0;
-  background-color: #69b3d7;
+  background-color: #69b2d7c5;
 }
 
 .animeCard {
-  background-color: #eeddef;
+  background-color: #eeddefe9;
   border-radius: 5px;
   padding: 20px;
   text-align: center;
