--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,20 @@
-
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
 
 body {
   background-color: #ffffff;
 }
 
-
 @font-face {
   font-family: "Donpoligrafbum";
   font-style: Bold;
   font-weight: 400;
-  src: local("Donpoligrafbum-Bold"),
-       url("../public/fonts/Donpoligrafbum-Bold.woff") format("woff");
+  src:
+    local("Donpoligrafbum-Bold"),
+    url("../public/fonts/Donpoligrafbum-Bold.woff") format("woff");
 }
 
 @font-face {
@@ -44,4 +41,3 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-
