--- a/src/components/Feedback/Feedback.module.scss
+++ b/src/components/Feedback/Feedback.module.scss
@@ -1,19 +1,22 @@
 .form {
   max-width: 1200px;
-  margin: auto;
-  padding: 30px;
+  margin: 0 auto;
+  padding: 0 20px;
   font-family: "Involve Regular";
   background-color: #eeddef62;
   border-radius: 5px;
   text-align: center;
   color: #666;
 }
-.nameInput {
+.p {
   max-width: 1200px;
   width: 100%;
+  text-align: center;
 }
-.questionInput {
+.input {
   max-width: 1200px;
   width: 100%;
-  min-height: 150px;
+  height: auto;
+  border-radius: 5px;
+  border: none;
 }
