разобраться с генерацией ссылок

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,10 @@
   margin: 0 auto;
   padding: 0 20px;
 }
-
+a {
+  text-decoration: none;
+  color: #f6c4d0;
+}
 header {
   background-color: #90a070;
   font-family: "Rubik Mono One", monospace;
