--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   background-color: #ffffff;
   height: 100%;
 }
+.animeLink {
+  color: black;
+  font-weight: 900;
+}
 
 @font-face {
   font-family: "Donpoligrafbum";
