--- a/src/components/ThemeChanger/ThemeChanger.module.scss
+++ b/src/components/ThemeChanger/ThemeChanger.module.scss
@@ -1,10 +1,37 @@
+.theme-light {
+  --color-primary: #0060df;
+  --color-secondary: #fbfbfe;
+  --color-accent: #fd6f53;
+  --font-color: #000000;
+}
+.theme-dark {
+  --color-primary: #17ed90;
+  --color-secondary: #2a2c2d;
+  --color-accent: #12cdea;
+  --font-color: #ffffff;
+}
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: var(--color-secondary);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &p {
+    color: var(--font-color);
+  }
+}
+
 .switch {
   position: relative;
-  display: flex;
+  display: inline-block;
   width: 60px;
   height: 34px;
   &input {
-    display: none;
+    opacity: 0;
+    width: 0;
+    height: 0;
   }
 }
 .slider {
@@ -17,29 +44,43 @@
   background-color: #ccc;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  border-radius: 34px;
-
-  &:before {
+  &::before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
+    height: 40px;
+    width: 40px;
+    left: 0px;
     bottom: 4px;
-    background-color: white;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
     -webkit-transition: 0.4s;
     transition: 0.4s;
-    border-radius: 50%;
+    box-shadow: 0 0px 15px #2020203d;
+    background: white url("https://i.ibb.co/FxzBYR9/night.png");
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
+
 input:checked + .slider {
-  background-color: #21def384;
+  background-color: #2196f3;
 }
 input:focus + .slider {
   box-shadow: 0 0 1px #2196f3;
 }
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(24px);
+  -ms-transform: translateX(24px);
+  transform: translateX(24px);
+  background: white url("https://i.ibb.co/7JfqXxB/sunny.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
